VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress) (wordt niet meer ondersteund sinds 5.5.2)
WC3 = WooCommerce 3 (WordPress)
WC4 = WooCommerce 4 (WordPress)

6.3.0 (2021-06-??)
------------------
Features:
- All: Added the ReportThresholdEuCommerce API call to AcumulusClient (but this
  call is not used yet).

Bugs:
- HS: reinstated use of fallback name for shipping method.
- ALL: timeout period used to prevent double sending was too short (expressed in
  seconds while used as milliseconds).
- WC: Sometimes, vat amounts on item lines are stored with a precision of being
  rounded to the cent. If so, the price ex has a higher precision than the price
  inc, even if prices are entered including vat. So, in these cases we should
  not recalculate the price ex after we have obtained a corrected vat rate.

Refactorings:
- HS: better logging with warnings in method getShippingLines().

6.2.0 (2021-02-10)
------------------
Bugs:
- OC: PHP 7 syntax (?? instead of isset(a) ? a : b) in OC::ConfigStore removed.
- WC|MA2: Het laden van de javascript voor het "geef deze plugin een waardering"
  bericht ging niet goed.

Features:
- ALL: New settings that allow to better distinguish between vat-free and 0% vat
  rates. This is important to get correct vat declarations and reports.
  Please visit the settings page and fill in these new settings.
- HS: HS 4+ has a setting on shipping methods "Automatic taxes"/"Automatische
  belastingen" that determines how the vat on shipping is calculated. The value
  "Proportion"/"Verhouding" uses the (weighed) average vat rate on the item
  lines as vat rate for the shipping. This component now supports this value.
  Note that it may result in multiple shipping lines if there are different vat
  rates on the item lines.
- ALL: These new settings and some already existing ones use the term "vat
  class"/"belastingklasse", but this does not always match the shop's way of